Spring MVC - Model

--- a/Spring-08-Spring-MVC-Model/src/main/resources/templates/student/welcome.html
+++ b/Spring-08-Spring-MVC-Model/src/main/resources/templates/student/welcome.html
@@ -11,7 +11,10 @@
 <h2 th:text="${id}"></h2>
 <h2 th:text="${numbers}"></h2>
 <h2 th:text="${numbers.get(0)}"></h2>
-
+<!-- get first name only; -->
+<h2 th:text="${student.firstName}"></h2>
+<!-- get last name only; -->
+<h2 th:text="${student.lastName}"></h2>
 
 
 
